--- a/injected.css
+++ b/injected.css
@@ -13,7 +13,7 @@
 	border-radius:8px;
 	padding:1px;
 	background-color:white;
-	max-width:455px;
+	max-width:458px;
 }
 
 #bubbledictionaryiframe
@@ -21,6 +21,7 @@
 	float: right;
 	/*height: 600px;*/
 	width: 455px;
+	border: 0px;
 }
 
 #bubbledictionaryclose
